# Virtual-Machine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
configs/: macros.hpp  types.hpp  utils.hpp
entry/: CMakeLists.txt  entry.cpp
frontend/lexer/includes/: Lexer.h
frontend/lexer/sources/: Lexer.cpp
frontend/parser/includes/: driver.h
frontend/tests/: test_lexer.cpp
isa/: isa.yaml  opcodes.hpp  registers.hpp
runtime/: CMakeLists.txt  array.cpp  decoder.cpp  executor.cpp  interpreter.cpp  string.cpp
runtime/coretypes/: array.cpp  object_header.cpp
runtime/includes/: array.hpp  decoder.hpp  executor.hpp  frame.hpp  inst_creator_inl.hpp  instruction.hpp  interpreter.hpp  object_header.hpp  pool_manager.hpp  string.hpp  vm_file.hpp
runtime/mem/: frame.cpp  pool_manager.cpp
runtime/tests/: CMakeLists.txt  interpreter_tests.cpp
runtime/usability_check/: CMakeLists.txt  quadratic.cpp
scripts/: inst_creator_gen.py  install_third_party.py  run_clang_format.py
